force-app/main/default/objects/TPE_Order__c/fields/Container__c.field-meta.xml
<CustomField>
    <fullName>Container__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Container</label>
    <referenceTo>Container__c</referenceTo>
    <relationshipLabel>TPE Orders</relationshipLabel>
    <relationshipName>TPE_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>