force-app/main/default/objects/TPE_Order__c/fields/Delivery_Custom__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Custom__c</fullName>
    <label>Delivery Custom</label>
    <length>100</length>
    <type>Text</type>
</CustomField>