force-app/main/default/objects/TPE_Order__c/fields/Estimated_delivery2__c.field-meta.xml
<CustomField>
    <fullName>Estimated_delivery2__c</fullName>
    <formula>CASE( Transport__c , 

&apos;Sea&apos;,  ADDMONTHS( Transport_start__c ,4) ,
 &apos;Land&apos;,  ADDMONTHS( Transport_start__c ,2) ,
&apos;Air&apos;,  ADDMONTHS( Transport_start__c ,1) ,
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated delivery2</label>
    <type>Date</type>
</CustomField>