force-app/main/default/objects/TPE_Order__c/fields/Estimated_delivery__c.field-meta.xml
<CustomField>
    <fullName>Estimated_delivery__c</fullName>
    <formula>IF( ISPICKVAL( Transport__c , &apos;Sea&apos;) ,  ADDMONTHS( Transport_start__c ,4) ,
 IF( ISPICKVAL( Transport__c , &apos;Land&apos;) ,  ADDMONTHS( Transport_start__c ,2) ,
 IF(  ISPICKVAL( Transport__c , &apos;Air&apos;), ADDMONTHS( Transport_start__c ,1),  null) ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated delivery</label>
    <type>Date</type>
</CustomField>