force-app/main/default/objects/TPE_Order__c/fields/Mishap_reason__c.field-meta.xml
<CustomField>
    <fullName>Mishap_reason__c</fullName>
    <label>Mishap reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>