force-app/main/default/objects/TPE_Order__c/fields/NumOfTenants__c.field-meta.xml
<CustomField>
    <fullName>NumOfTenants__c</fullName>
    <label>NumOfTenants</label>
    <summaryForeignKey>Tenant_Order__c.TPE_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>