force-app/main/default/objects/TPE_Order__c/fields/Order_location__c.field-meta.xml
<CustomField>
    <fullName>Order_location__c</fullName>
    <label>Order location</label>
    <scale>9</scale>
    <type>Location</type>
</CustomField>