force-app/main/default/objects/TPE_Order__c/fields/Parcel_Rentable__c.field-meta.xml
<CustomField>
    <fullName>Parcel_Rentable__c</fullName>
    <formula>OR(ISPICKVAL( Type__c , &apos;General Purpose&apos;),ISPICKVAL( Type__c , &apos;Temperature Sensitive&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parcel Rentable</label>
    <type>Checkbox</type>
</CustomField>