force-app/main/default/objects/TPE_Order__c/fields/Season_for_shipment__c.field-meta.xml
<CustomField>
    <fullName>Season_for_shipment__c</fullName>
    <label>Season for shipment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Seasons</valueSetName>
    </valueSet>
</CustomField>