force-app/main/default/objects/TPE_Order__c/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <label>Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5ft.</fullName>
            </value>
            <value>
                <fullName>10ft.</fullName>
            </value>
            <value>
                <fullName>20ft.</fullName>
            </value>
            <value>
                <fullName>40ft.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>