force-app/main/default/objects/TPE_Order__c/fields/Transport_start__c.field-meta.xml
<CustomField>
    <fullName>Transport_start__c</fullName>
    <label>Transport start</label>
    <type>Date</type>
</CustomField>