force-app/main/default/objects/TPE_Order__c/recordTypes/Sea.recordType-meta.xml
<RecordType>
    <fullName>Sea</fullName>
    <active>true</active>
    <label>Sea</label>
</RecordType>