force-app/main/default/objects/TPE_Order__c/validationRules/ApprovalDateRule.validationRule-meta.xml
<ValidationRule>
    <fullName>ApprovalDateRule</fullName>
    <active>true</active>
    <description>Approval must be done during the first 15 days of the month</description>
    <errorConditionFormula>DAY( ApprovalDate__c ) &gt;15</errorConditionFormula>
    <errorDisplayField>ApprovalDate__c</errorDisplayField>
    <errorMessage>Approval must be done during the first 15 days of the month</errorMessage>
</ValidationRule>