force-app/main/default/objects/TPE_Order__c/validationRules/TransportStartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>TransportStartDate</fullName>
    <active>true</active>
    <description>date can not be in the past</description>
    <errorConditionFormula>Transport_start__c  &lt;  TODAY()</errorConditionFormula>
    <errorDisplayField>Transport_start__c</errorDisplayField>
    <errorMessage>date can not be in the past</errorMessage>
</ValidationRule>