force-app/main/default/objects/TPE_Order__c/validationRules/TransportType.validationRule-meta.xml
<ValidationRule>
    <fullName>TransportType</fullName>
    <active>true</active>
    <description>must not be empty</description>
    <errorConditionFormula>ISBLANK( TEXT(Transport__c ))</errorConditionFormula>
    <errorDisplayField>Transport__c</errorDisplayField>
    <errorMessage>TransportType must be not empty</errorMessage>
</ValidationRule>